#10. BoxController total refactoring